Fixed swagger/docs error
